support multiple gateway ips in one network